uma pequena atualização

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -67,15 +67,15 @@
       if (pontuacao >= 9) {
         barraForcaSenha.style.width = '100%';
         barraForcaSenha.style.backgroundColor = 'green';
-        textoForcaSenha.innerText = 'Força da senha: Forte';
+        textoForcaSenha.innerText = 'Nivel da Força da Senha: Forte';
       } else if (pontuacao > 5 && pontuacao < 9) {
         barraForcaSenha.style.width = '50%';
         barraForcaSenha.style.backgroundColor = 'yellow';
-        textoForcaSenha.innerText = 'Força da senha: Moderada';
+        textoForcaSenha.innerText = 'Nivel da Força da Senha: Moderada';
       } else {
         barraForcaSenha.style.width = '25%';
         barraForcaSenha.style.backgroundColor = 'red';
-        textoForcaSenha.innerText = 'Força da senha: Fraca';
+        textoForcaSenha.innerText = 'Nivel da Força da Senha: Fraca';
       }
     }
   // Adiciona um evento de entrada para verificar a força da senha quando o usuário digita
